syntax = "proto3";
package schema.v2;

import "v2/block_core.proto";
import "v2/project_figma.proto";

message ProjectTicketCreationRequest {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  optional Figma figma = 3;
  repeated core.Block use_cases = 4;
  string master_language_code = 5;
}

message ProjectTicketCreationResponse {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  Module module = 3;
  Status status = 4;
  int32 token_usage = 5;
  repeated core.Block tickets = 6;
  repeated core.Block useCases = 7;
  string error_message = 8;

  enum Module {
    USECASE_TO_TICKET = 0;
    IMAGE = 1;
  }

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}

message ProjectTicketCreationByApiRequest {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  repeated core.Block apis = 4;
  repeated core.Block tickets = 5;
  repeated PullRequest pull_requests = 6;
  string master_language_code = 7;

  message PullRequest {
    int32 number = 1;
    string name = 2;
    string status = 3;
    string block_node_id = 4;
  }
}

message ProjectTicketCreationByApiResponse {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;
  Module module = 3;
  Status status = 4;
  int32 token_usage = 5;
  repeated core.Block tickets = 6;
  string error_message = 7;

  enum Module {
    API_TO_TICKET = 0;
  }

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}
